Remove customer tag support
